fix:Fix the height of the navbar and darken the background image on mobile

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,10 +1,10 @@
 .home-top-div {
-  background-image: linear-gradient(rgba(5, 6, 5, 0.5), #000),
+  background-image: linear-gradient(rgba(5, 6, 5, 0.7), #000),
     url(/public/assets/home2.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 85vh;
+  min-height: 90vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -57,6 +57,7 @@
   color: var(--color-header-footer);
   border-radius: 0 10px 10px 0;
   cursor: pointer;
+  font-size: 16px;
 }
 
 .home-images {
@@ -147,6 +148,11 @@
 
   .home-form {
     justify-content: flex-start;
+  }
+
+  .form-input,
+  .form-btn {
+    padding: 15px;
   }
 
   .home-images {
