--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -38,7 +38,8 @@
 }
 
 .wallet-div {
-  margin-top: 17px;
+  display: flex;
+  align-items: center;
   margin-right: 60px;
 }
 
